# xhs-opinion-radar

./: .env.example  .gitignore  AGENTS.md  README.md  config.yaml  index.html  package-lock.json  package.json  pyproject.toml  tsconfig.node.json  tsconfig.worker.json  vite.config.ts  vite.local.config.ts  vite.shared.ts  vitest.config.ts  wrangler.jsonc
.github/workflows/: ci.yml  deploy-cloudflare-containers.yml
app/: cli.py  config.py  crawler.py  models.py  storage.py
bert/: DATASETS.md  README.md  app.py  apply_manual_review.py  evaluate.py  export_onnx.py  train.py
browser-extension/: background.js  content.js  manifest.json  page-bridge.js  popup.css  popup.html  popup.js
docs/: local-runtime.md  mediacrawler-integration.md  playwright-collector.md  project-status.md
scripts/: dataset-from-captures.mjs  dataset-label-llm.mjs  dataset-merge.mjs  deploy-bert-space.ps1  local-webui.mjs  mediacrawler-to-capture.mjs  run-mediacrawler-xhs.ps1  setup-bert.ps1  start-local.ps1  stop-local.ps1
src/: App.tsx  styles.css
src/components/ui/: alert.tsx  badge.tsx  button.tsx  card.tsx  chart.tsx  label.tsx  scroll-area.tsx  separator.tsx  slider.tsx  table.tsx  tabs.tsx  tooltip.tsx
src/shared/: types.ts
tests/: test_pipeline.py
worker/: analyze.ts  env.ts  fixtures.ts  http.ts  index.ts  login.ts  sentiment.ts  session.ts  stats.test.ts  stats.ts  text.ts  xiaohongshu.ts
